Simple fix for long standing block alignment issue

--- a/app/assets/stylesheets/datasets.css.scss
+++ b/app/assets/stylesheets/datasets.css.scss
@@ -21,6 +21,7 @@
 
 .map-data-item {    // li
   display: inline-block;
+  vertical-align: top;
   margin: 6px;
   padding: 2px;
   outline: 1px solid rgba(0,0,0,0.2);       // Outer line
